--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,20 @@
 			<version>7.0</version>
 		</dependency>
 
+		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
-<!-- 			<scope>test</scope> -->
+
 		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
