--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,16 @@
 		<version.arquillian_drone>1.0.0.CR2</version.arquillian_drone>
 		<version.org.jboss.arquillian>1.1.1.Final</version.org.jboss.arquillian>
 		<version.org.jboss.arquillian.drone.webdriver>1.2.0.Beta2</version.org.jboss.arquillian.drone.webdriver>
+		<browser>htmlUnit</browser>
 	</properties>
+	<profiles>
+		<profile>
+			<id>phantomjs</id>
+			<properties>
+				<browser>phantomjs</browser>
+			</properties>
+		</profile>
+	</profiles>
 	<build>
 		<plugins>
 			<plugin>
@@ -24,6 +33,11 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resource-plugin</artifactId>
+				<version>2.6</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jasig.maven</groupId>
@@ -47,6 +61,10 @@
 							<destination>${project.basedir}/src/main/webapp/resources/css</destination>
 						</resource>
 					</resources>
+					<testresources>
+						<directory>src/test/resources</directory>
+						<filtering>true</filtering>
+					</testresources>
 				</configuration>
 			</plugin>
 		</plugins>
