Added support for filtering resources such as desired browser

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ target/
 src/main/webapp/resources/css/hhcib.css
 src/main/webapp/resources/css/hhcib_menu.css
 src/main/webapp/resources/css/hhcib_print.css
+phantomjsdriver.log
